fix alignment

--- a/packages/lab/src/tabs-next/TabstripNext.css
+++ b/packages/lab/src/tabs-next/TabstripNext.css
@@ -2,7 +2,7 @@
 .saltTabstripNext {
   display: flex;
   flex-wrap: nowrap;
-  justify-content: var(--tabstripNext-justifyContent, center);
+  justify-content: var(--tabstripnext-justifyContent);
   position: relative;
   background: transparent;
   width: 100%;
